--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,16 +7,13 @@
           <h1><a href="">Kayla's Blog</a></h1>
       </div>
 
+      {% for post in posts %}
       <div>
-            <p>published: 24.09.2016, 14:02</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Hey, I'm Kayla, and I'm writing this blog</p>
+          <p>published: {{ post.published_date }}</p>
+          <h1><a href="">{{ post.title }}</a></h1>
+          <p>{{ post.text|linebreaksbr }}</p>
       </div>
-
-      <div>
-           <p>published: 24.09.2016, 14:07</p>
-           <h2><a href="">My second post</a></h2>
-           <p>I hope you like my posts!</p>
-      </div>
+      {% endfor %}
+      
   </body>
 </html>
