Changed color scheme.

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,11 +1,11 @@
 .page-header {
-    background-color: #ff9400;
+    background-color: #c9d8c5;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
+    color: #7d4627;
     font-size: 36pt;
     text-decoration: none;
 }
@@ -15,11 +15,12 @@
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Baloo Da', cursive;
 }
 
 .date {
-    color: #828282;
+    color: #7d4627;
+    font-family: 'Baloo Da', cursive;
 }
 
 .save {
@@ -28,10 +29,11 @@ h1, h2, h3, h4 {
 
 .post-form textarea, .post-form input {
     width: 100%;
+
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
+    color: #c9d8c5;
     float: right;
     font-size: 26pt;
     margin-right: 20px;
@@ -39,8 +41,20 @@ h1, h2, h3, h4 {
 
 .post {
     margin-bottom: 70px;
+    color: #7d4627;
+    font-family: 'Roboto Mono', monospace;
 }
 
+
 .post h1 a, .post h1 a:visited {
-    color: #000000;
+    color: #89bdd3;
+}
+
+h1 {
+  color: #3fb0ac;
+
+}
+body
+{
+  background: #edd9c0;
 }
