changed adding icon color

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -33,7 +33,7 @@ h1, h2, h3, h4 {
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-    color: #c9d8c5;
+    color: #89bdd3;
     float: right;
     font-size: 26pt;
     margin-right: 20px;
